Fixed the title missing its font on mobile

--- a/wwwroot/site.css
+++ b/wwwroot/site.css
@@ -58,7 +58,7 @@ p {
   font-size: 3.5rem;
   font-weight: 370;
   line-height: 1.2;
-	font-family: "Segoe UI";
+	font-family: "Roboto", "Segoe UI", "Open Sans", "Optima", sans-serif;
 }
 
 .pre-scrollable {
